# ChillTUI

./: .gitignore  Cargo.toml  DISTRIBUTION.md  README.md  SESSION_NOTES.md
src/: main.rs
src/api/: chill.rs  mod.rs  putio.rs
src/config/: mod.rs
src/models/: mod.rs
src/ui/: mod.rs  setup.rs
